# configuring-qbusiness-with-idc-tti

./: .flake8  .gitignore  README.md  pyproject.toml
cf/: README.md  qb-api-app-config.yaml  qb-api-idc-config.yaml  qb-api-poc-cognito.yaml
docs/: README.md
docs/tutorials/cognito/: config-webapp-using-cognito.md  register-webapp-with-cognito.md
docs/tutorials/entra/: config-webapp-using-entra.md  find-entra-issuer-url.md  register-webapp-with-entra.md
docs/tutorials/idc/: idc-modes.md  intro-idc-tti.md
docs/tutorials/okta/: config-webapp-using-okta.md  find-okta-issuer-url.md  register-webapp-with-okta.md
resources/files/: aws-repost_iam-users.md  aws-repost_securing-account.md
samples/: .env.dist  README.md  chat.py  custom_ds.py  info.py
src/qbapi_tools/: access_helpers.py  api_helpers.py  datamodel.py  exception.py
webapp/: README.md  main.py  user.py
webapp/config/: .env.cognito.dist  .env.entra.dist  .env.okta.dist
webapp/templates/: chat.html  conversations.html  home.html  profile.html  template.html
